--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -156,3 +156,28 @@ main section{
     font-size: 30px;
     font-weight: 700;
 }
+.resume-conteiner{
+    display:flex;
+    gap: 50px;
+}
+.resume-item-institute{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+.resume-item-institute ,.resume-item-description{
+    color: #757575;
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.resume-conteiner hr{
+    margin: 30px auto;
+} 
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+}
