--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -184,7 +184,26 @@ main section{
 /* footer styles */
 footer{
     display: flex;
+    gap: 100px;
     background-color: #FFF8F3;
     margin-top: 100px;
     padding: 130px 200px;
+}
+.footer-column{
+    width: 50%;
+}
+.social-link a{
+    margin-right:25px ;
+}
+
+.contact input[type="text"],.contact input[type="email"], textarea{
+    display: block;
+    width: 100%;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background-color: #FFF;
+    border: 0;
+
 }
